--- a/binary-option/client/requirements.txt
+++ b/binary-option/client/requirements.txt
@@ -1,38 +1,41 @@
-attrs==21.2.0
+anyio==3.3.4
+backcall==0.2.0
 base58==2.1.0
-certifi==2021.5.30
-cffi==1.14.5
-chardet==4.0.0
-cheroot==8.5.2
-CherryPy==18.6.0
+cachetools==4.2.4
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
 construct==2.10.67
-cryptography==3.4.7
+cryptography==35.0.0
+decorator==5.1.0
 ed25519==1.5
-idna==2.10
-iniconfig==1.1.1
-jaraco.classes==3.2.1
-jaraco.collections==3.3.0
-jaraco.functools==3.3.0
-jaraco.text==3.5.0
-more-itertools==8.8.0
-numpy==1.21.0
-packaging==20.9
-pandas==1.3.0
-pluggy==0.13.1
-portend==2.7.1
-py==1.10.0
+h11==0.12.0
+httpcore==0.13.7
+httpx==0.20.0
+idna==3.3
+ipython==7.28.0
+jedi==0.18.0
+matplotlib-inline==0.1.3
+numpy==1.21.3
+pandas==1.3.4
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.21
+ptyprocess==0.7.0
 pycparser==2.20
+Pygments==2.10.0
 PyNaCl==1.4.0
-pyparsing==2.4.7
-pytest==6.2.4
-python-dateutil==2.8.1
-pytz==2021.1
-requests==2.25.1
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.26.0
+rfc3986==1.5.0
 six==1.16.0
-solana==0.10.0
-tempora==4.1.1
+sniffio==1.2.0
+solana==0.18.1
 toml==0.10.2
-typing-extensions==3.10.0.0
-urllib3==1.26.6
-websockets==9.1
-zc.lockfile==2.0
+traitlets==5.1.1
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+wcwidth==0.2.5
+websockets==10.0
