--- a/binary-option/program/Cargo.toml
+++ b/binary-option/program/Cargo.toml
@@ -15,6 +15,7 @@ spl-token = {version = "3.1.1", path = "../../token/program", features = ["no-en
 arrayref = "0.3.6"
 borsh = "0.9"
 uint = "0.9"
+pyth-client = "0.2.2"
 
 [lib]
 crate-type = ["cdylib", "lib"]
